transform korean value

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -10,16 +9,16 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <title>Welcome to kokoa Talk</title>
+    <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
-    <div id="'status-bar">
+    <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
-        <!-- To Do : WIFI ICON -->
+        <span>서비스지역 아님</span>
+        <i class="fas fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18: 43</span>
+        <span>18:43</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -27,5 +26,19 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">환영합니다! 코코아톡 입니다!</h1>
+      <p class="welcome-header__text">
+        코코아 계정이 있다면 이메일이나 전화번호로 로그인하세요.
+      </p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placeholder="이메일 혹은 전화번호를 적어주세요 !" />
+      <input type="password" placeholder="비밀번호" />
+      <input type="submit" value="로그인" />
+      <a href="#">코코아 계정 또는 암호 찾기</a>
+    </form>
   </body>
 </html>
