채팅목록 완성

--- a/chats.html
+++ b/chats.html
@@ -23,7 +23,7 @@
 </div>
 
 <header class="screen-header">
-    <h1 class="screen-header__title">Chats</h1>
+    <h1 class="screen-header__title">채팅 목록</h1>
     <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
@@ -40,13 +40,16 @@
                     class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-                <h4 class="user-component__title">Nicolas</h4>
+                <h4 class="user-component__title">김승석</h4>
                 <h6 class="user-component__subtitle">
-                    Please check My Kokoa Account Info
+                    코코아 계정 정보를 확인해주세요.
                 </h6>
             </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
+        </div>
     </div>
 </main>
 
@@ -59,7 +62,7 @@
         </li>
         <li class="nav__btn">
             <a class="nav__link" href="chats.html">
-                <span class="nav__notification">1</span>
+                <span class="nav__notification badge">1</span>
                 <i class="fas fa-comment fa-2x"></i>
             </a>
         </li>
