--- a/friends.html
+++ b/friends.html
@@ -23,7 +23,7 @@
 </div>
 
 <header class="screen-header">
-  <h1 class="screen-header__title">Friends</h1>
+  <h1 class="screen-header__title">친구 목록</h1>
   <div class="screen-header__icons">
     <span><i class="fas fa-search fa-lg"></i></span>
     <span><i class="fas fa-music fa-lg"></i></span>
@@ -32,7 +32,7 @@
 </header>
 
 <a id="friends-display-link">
-  <i class="fas fa-info-circle"></i> Friends' Names Display
+  <i class="fas fa-info-circle"></i> 친구를 찾아보세요 !
   <i class="fas fa-chevron-right fa-xs"></i>
 </a>
 
@@ -40,11 +40,11 @@
   <div class="user-component">
     <div class="user-component__column">
       <img
-              src="https://avatars3.githubusercontent.com/u/3612017"
+              src="https://avatars.githubusercontent.com/u/64651532?v=4 "
               class="user-component__avatar user-component__avatar--xl"
       />
       <div class="user-component__text">
-        <h4 class="user-component__title">Nicolas</h4>
+        <h4 class="user-component__title">승구몬</h4>
         <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
       </div>
     </div>
@@ -52,7 +52,7 @@
   </div>
   <div class="friends-screen__channel">
     <div class="friends-screen__channel-header">
-      <span>Channel</span>
+      <span>채널</span>
       <i class="fas fa-chevron-up fa-xs"></i>
     </div>
     <div class="user-component">
@@ -63,13 +63,15 @@
         />
         <div class="user-component__text">
           <h4 class="user-component__title user-component__title--not-bold">
-            Channel
+            채널
           </h4>
         </div>
       </div>
       <div class="user-component__column">
-        <span>2</span>
-        <i class="fas fa-chevron-right fa-xs"></i>
+        <div>
+          <span>2</span>
+          <i class="fas fa-chevron-right fa-xs"></i>
+        </div>
       </div>
     </div>
   </div>
@@ -84,7 +86,7 @@
     </li>
     <li class="nav__btn">
       <a class="nav__link" href="chats.html">
-        <span class="nav__notification">1</span>
+        <span class="nav__notification badge">1</span>
         <i class="far fa-comment fa-2x"></i>
       </a>
     </li>
