--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">환영합니다! 코코아톡이에요!</h1>
       <p class="welcome-header__text">
-        If you have a Kokoa Account, log in with your email or phone number.
+        코코아 계정이 있다면 이메일이나 전화번호로 로그인하세요.
       </p>
     </header>
 
     <form action="friends.html" method="get" id="login-form">
-      <input name="username" type="text" placeholder="Email or phone number" />
-      <input name="password" type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <a href="#">Find Kokoa Account or Password</a>
+      <input name="username" type="text" placeholder="이메일 혹은 전화번호를 적어주세요" />
+      <input name="password" type="password" placeholder="비밀번호를 적어주세요" />
+      <input type="submit" value="로그인" />
+      <a href="#">코코아 계정 또는 암호 찾기</a>
     </form>
 
     <script
