--- a/chats.html
+++ b/chats.html
@@ -1,87 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chats - Kokoa Clone</title>
-</head>
-<body>
-<div class="status-bar">
+  </head>
+  <body>
+  <div class="status-bar">
     <div class="status-bar__column">
-        <span>No Service</span>
-        <i class="fas fa-wifi"></i>
+      <span>서비스 지역 아님</span>
+      <i class="fas fa-wifi"></i>
     </div>
     <div class="status-bar__column">
-        <span>18:43</span>
+      <span>18:43</span>
     </div>
     <div class="status-bar__column">
-        <span>110%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
+      <span>100%</span>
+      <i class="fas fa-battery-full fa-lg"></i>
+      <i class="fas fa-bolt"></i>
     </div>
-</div>
+  </div>
 
-<header class="screen-header">
+  <header class="screen-header">
     <h1 class="screen-header__title">채팅 목록</h1>
     <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+      <span><i class="fas fa-search fa-lg"></i></span>
+      <span><i class="fas fa-music fa-lg"></i></span>
+      <span><i class="fas fa-cog fa-lg"></i></span>
     </div>
-</header>
+  </header>
 
-<main class="main-screen">
-    <div class="user-component">
-        <div class="user-component__column">
+    <main class="main-screen">
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
             <img
-                    src="https://avatars3.githubusercontent.com/u/3612017"
-                    class="user-component__avatar user-component__avatar"
+              src="https://avatars.githubusercontent.com/u/64651532?v=4"
+              class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-                <h4 class="user-component__title">김승석</h4>
-                <h6 class="user-component__subtitle">
-                    코코아 계정 정보를 확인해주세요.
-                </h6>
+              <h4 class="user-component__title">승구몬</h4>
+              <h6 class="user-component__subtitle">
+                코코아톡 계정 정보를 확인해주세요
+              </h6>
             </div>
-        </div>
-        <div class="user-component__column">
+          </div>
+          <div class="user-component__column">
             <span class="user-component__time">21:22</span>
             <div class="badge">1</div>
+          </div>
         </div>
-    </div>
-</main>
+      </a>
+    </main>
 
-<nav class="nav">
-    <ul class="nav__list">
+    <nav class="nav">
+      <ul class="nav__list">
         <li class="nav__btn">
-            <a class="nav__link" href="friends.html"
+          <a class="nav__link" href="friends.html"
             ><i class="far fa-user fa-2x"></i
-            ></a>
+          ></a>
         </li>
         <li class="nav__btn">
-            <a class="nav__link" href="chats.html">
-                <span class="nav__notification badge">1</span>
-                <i class="fas fa-comment fa-2x"></i>
-            </a>
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
+            <i class="fas fa-comment fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
-            <a class="nav__link" href="find.html"
+          <a class="nav__link" href="find.html"
             ><i class="fas fa-search fa-2x"></i
-            ></a>
+          ></a>
         </li>
         <li class="nav__btn">
-            <a class="nav__link" href="more.html"
+          <a class="nav__link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-2x"></i
-            ></a>
+          ></a>
         </li>
-    </ul>
-</nav>
+      </ul>
+    </nav>
 
-<script
-        src="https://kit.fontawesome.com/6478f529f2.js"
-        crossorigin="anonymous"
-></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
