--- a/friends.html
+++ b/friends.html
@@ -1,111 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="css/styles.css" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Friends - Kokoa Clone</title>
-</head>
-<body>
-<div class="status-bar">
-  <div class="status-bar__column">
-    <span>No Service</span>
-    <i class="fas fa-wifi"></i>
-  </div>
-  <div class="status-bar__column">
-    <span>18:43</span>
-  </div>
-  <div class="status-bar__column">
-    <span>110%</span>
-    <i class="fas fa-battery-full fa-lg"></i>
-    <i class="fas fa-bolt"></i>
-  </div>
-</div>
-
-<header class="screen-header">
-  <h1 class="screen-header__title">친구 목록</h1>
-  <div class="screen-header__icons">
-    <span><i class="fas fa-search fa-lg"></i></span>
-    <span><i class="fas fa-music fa-lg"></i></span>
-    <span><i class="fas fa-cog fa-lg"></i></span>
-  </div>
-</header>
-
-<a id="friends-display-link">
-  <i class="fas fa-info-circle"></i> 친구를 찾아보세요 !
-  <i class="fas fa-chevron-right fa-xs"></i>
-</a>
-
-<main class="friends-screen">
-  <div class="user-component">
-    <div class="user-component__column">
-      <img
-              src="https://avatars.githubusercontent.com/u/64651532?v=4 "
-              class="user-component__avatar user-component__avatar--xl"
-      />
-      <div class="user-component__text">
-        <h4 class="user-component__title">승구몬</h4>
-        <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+  <head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>친구목록 - 코코아톡</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>서비스 지역 아님</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>100%</span>
+        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-bolt"></i>
       </div>
     </div>
-    <div class="user-component__column"></div>
-  </div>
-  <div class="friends-screen__channel">
-    <div class="friends-screen__channel-header">
-      <span>채널</span>
-      <i class="fas fa-chevron-up fa-xs"></i>
-    </div>
-    <div class="user-component">
-      <div class="user-component__column">
-        <img
-                src="https://avatars3.githubusercontent.com/u/3612017"
-                class="user-component__avatar user-component__avatar--sm"
-        />
-        <div class="user-component__text">
-          <h4 class="user-component__title user-component__title--not-bold">
-            채널
-          </h4>
+
+    <header class="screen-header">
+      <h1 class="screen-header__title">친구 목록</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i> 친구 목록에 표시 됩니다
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars.githubusercontent.com/u/64651532?v=4"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">승구몬</h4>
+            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>채널</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars.githubusercontent.com/u/64651532?v=4"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                채널
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="user-component__column">
-        <div>
-          <span>2</span>
-          <i class="fas fa-chevron-right fa-xs"></i>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
+    </main>
 
-<nav class="nav">
-  <ul class="nav__list">
-    <li class="nav__btn">
-      <a class="nav__link" href="friends.html"
-      ><i class="fas fa-user fa-2x"></i
-      ></a>
-    </li>
-    <li class="nav__btn">
-      <a class="nav__link" href="chats.html">
-        <span class="nav__notification badge">1</span>
-        <i class="far fa-comment fa-2x"></i>
-      </a>
-    </li>
-    <li class="nav__btn">
-      <a class="nav__link" href="find.html"
-      ><i class="fas fa-search fa-2x"></i
-      ></a>
-    </li>
-    <li class="nav__btn">
-      <a class="nav__link" href="more.html"
-      ><i class="fas fa-ellipsis-h fa-2x"></i
-      ></a>
-    </li>
-  </ul>
-</nav>
-
-<script
-        src="https://kit.fontawesome.com/6478f529f2.js"
-        crossorigin="anonymous"
-></script>
-</body>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
+            ><i class="fas fa-user fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="more.html"
+            ><i class="fas fa-ellipsis-h fa-2x"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+<!--    <div id="splash-screen">-->
+<!--      <i class="fas fa-comment"></i>-->
+<!--    </div>-->
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
