more animation add

--- a/more.html
+++ b/more.html
@@ -47,7 +47,7 @@
           <i class="far fa-comment-alt fa-2x"></i>
         </div>
       </div>
-      <div class="icon-row">
+      <div class="icon-row slide-top">
         <div class="icon-row__icon">
           <i class="far fa-calendar"></i>
           <span>달력</span>
